// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectContext Provide & connect, mixin up with own prop 1`] = `
<ContextProvider>
  <Component>
    <ContextProxyComponent
      ownPropMessage="Hello, Provider!"
    >
      <ContextConnector
        @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
          Array [
            Object {
              "message": "Hello, Child!",
            },
            Object {
              "ownPropMessage": "Hello, Provider!",
            },
          ]
        }
      >
        <ContextLowerProxyComponent
          @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
            Array [
              Object {
                "message": "Hello, Child!",
              },
              Object {
                "ownPropMessage": "Hello, Provider!",
              },
            ]
          }
          contextMessage="Hello, Child!"
        >
          <Component
            contextMessage="Hello, Child!"
            ownPropMessage="Hello, Provider!"
          >
            <div>
              Hello, Child!
              ,
              Hello, Provider!
            </div>
          </Component>
        </ContextLowerProxyComponent>
      </ContextConnector>
    </ContextProxyComponent>
  </Component>
</ContextProvider>
`;

exports[`react-redux support Composition mount 1`] = `
<ContextProvider>
  <Component>
    <Provider
      store={
        Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        }
      }
    >
      <ContextProxyComponent>
        <Connect(ContextLowerProxyComponent)
          @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
            Array [
              Object {
                "selector": [Function],
              },
              Object {},
            ]
          }
        >
          <ContextLowerProxyComponent
            @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
              Array [
                Object {
                  "selector": [Function],
                },
                Object {},
              ]
            }
            data={124816}
            dispatch={[Function]}
          >
            <Component
              data={124816}
              dispatch={[Function]}
            >
              <div>
                Selected: 
                124816
              </div>
            </Component>
          </ContextLowerProxyComponent>
        </Connect(ContextLowerProxyComponent)>
      </ContextProxyComponent>
    </Provider>
  </Component>
</ContextProvider>
`;

exports[`react-redux support Standalone Child rendered well 1`] = `
<Connect(ContextLowerProxyComponent)
  @@connectContext.CONNECTOR_CONTEXT_TEMPORARY_CONTEXT_PROP={
    Array [
      Object {
        "selector": undefined,
      },
      Object {},
    ]
  }
/>
`;
